2005-10-13  Laurent Sansonetti  <lrz@gnome.org>

    * lib/alexandria/macui/Icons.rb,
      lib/alexandria/macui/ImportController.rb,
      lib/alexandria/macui/MainController.rb,
      lib/alexandria/macui/TableView.rb,
      lib/alexandria/macui/MainWindow.nib/info.nib,
      lib/alexandria/macui/MainWindow.nib/keyedobjects.nib:

    - Fixed the end of the import action ;
    - Double click in the libraries table view will edit ;
    - Added ellipsis after action names in some popup menus ;
    - Set the vertical scrollbar as autohide in the libraries table view ;
    - Some cleaning.

2005-10-02  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/library.rb,
	  lib/alexandria/ui/book_properties_dialog.rb,
	  lib/alexandria/ui/book_properties_dialog_base.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb:

	Fix for Ruby 1.8.3 YAML/Bignum bug, we now serialize the loaning date as
	a Time object and not an Epoch duration anymore.  Backward compatibility
	should be preserved by the fix.

2005-09-18  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/acquire_dialog.glade,
	  data/alexandria/ui/menus.xml,
	  lib/alexandria/ui/acquire_dialog.rb,
	  lib/alexandria/ui.rb,
	  lib/alexandria/ui/main_app.rb:

	Initial work on the new acquire barcodes dialog.

	* lib/alexandria/ui/libraries_combo.rb:

	New file that shares code to populate a combo box with libraries.
	
	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Removed all scanning stuff ;
	- The libraries popup menu now display a "New Library" item that
   	  automatically generates a library then adds the books in it ;
	- Fixed the help error transcient window.

	* lib/alexandria/library.rb:

	Shared the generation of library names.
	
	* lib/alexandria/ui/book_properties_dialog.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb,
	  lib/alexandria/ui/preferences_dialog.rb:

	Fixed the help error transcient window.
	  
	* lib/alexandria/ui/export_dialog.rb,